--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,25 @@
+<nav class="navbar navbar-expand-lg  bg-light fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="#">Booksy</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li *ngIf="!auth.loggedIn" class="nav-item">
+                    <a  (click)="auth.login()" class="nav-link" href="#">Login</a>
+                </li>
+                <li  *ngIf="auth.loggedIn" class="nav-item">
+                    <a (click)="auth.logout()" class="nav-link" href="#">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <router-outlet></router-outlet>
