add search component

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -2,10 +2,9 @@
     <div class="row">
         <div class="col-md-4">
             <div class="card my-4">
-                <h5 class="card-header">My profile</h5>
+                <h5 class="card-header">Do you have an account ?</h5>
                 <div class="card-body">
-                    Mohammed Yassine Cherif<br>
-                    <a href="#">Edit profile</a>
+                    <a href="#">Sign-in or sign-up</a>
                 </div>
             </div>
             <div class="card my-4" style="margin-bottom: 10px;">
