--- a/client/src/app/components/books/books.component.html
+++ b/client/src/app/components/books/books.component.html
@@ -1,77 +1,73 @@
 <h1 class="my-4">
-    <small>Pupular books</small>
+    <small>Popular books</small>
 </h1>
-<div class="row">
-    <div class="col-md-4">
-        <div class="card">
-            <img style="width: 100%;height: 50%;"
-                src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
-                alt="...">
-            <div class="card-body">
-                <h5 class="card-title">The perfect NANNY</h5>
-                <p class="card-text">LEILA SLIMANI</p>
-                <p class="card-text">October 2019</p>
+<div>
+    <h4>Popular books in Classics</h4><a href="#">More in Classics</a>
+    <hr>
+    <div class="row justify-content-center">
+        <div class="col-md-3">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
             </div>
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="card">
-            <img style="width: 100%;height: 50%;"
-                src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
-                alt="...">
-            <div class="card-body">
-                <h5 class="card-title">The perfect NANNY</h5>
-                <p class="card-text">LEILA SLIMANI</p>
-                <p class="card-text">October 2019</p>
+    <hr>
+    <div>
+        <h4>Popular books in Sport</h4><a href="#">More in Sport</a>
+        <hr>
+        <div class="row justify-content-center">
+            <div class="col-md-3">
+                <div class="card">
+                    <img style="width: 100%;height: 50%;"
+                        src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg"
+                        class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img style="width: 100%;height: 50%;"
+                        src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg"
+                        class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img style="width: 100%;height: 50%;"
+                        src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg"
+                        class="card-img-top" alt="...">
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card">
+                    <img style="width: 100%;height: 50%;"
+                        src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg"
+                        class="card-img-top" alt="...">
+                </div>
             </div>
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="card">
-            <img style="width: 100%;height: 50%;"
-                src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
-                alt="...">
-            <div class="card-body">
-                <h5 class="card-title">The perfect NANNY</h5>
-                <p class="card-text">LEILA SLIMANI</p>
-                <p class="card-text">October 2019</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card">
-            <img style="width: 100%;height: 50%;"
-                src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
-                alt="...">
-            <div class="card-body">
-                <h5 class="card-title">The perfect NANNY</h5>
-                <p class="card-text">LEILA SLIMANI</p>
-                <p class="card-text">October 2019</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card">
-            <img style="width: 100%;height: 50%;"
-                src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
-                alt="...">
-            <div class="card-body">
-                <h5 class="card-title">The perfect NANNY</h5>
-                <p class="card-text">LEILA SLIMANI</p>
-                <p class="card-text">October 2019</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card">
-            <img style="width: 100%;height: 50%;"
-                src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
-                alt="...">
-            <div class="card-body">
-                <h5 class="card-title">The perfect NANNY</h5>
-                <p class="card-text">LEILA SLIMANI</p>
-                <p class="card-text">October 2019</p>
-            </div>
-        </div>
-    </div>
-</div>
