fix front build

--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -21,7 +21,7 @@
 
         </div>
     </div>
-    <a class="btn btn-secondary" (click)="onSubmitIssue(newIssue)" data-toggle="collapse" href="#addIssue" role="button"
+    <a class="btn btn-secondary" data-toggle="collapse" href="#addIssue" role="button"
         aria-expanded="false" aria-controls="addIssue">Go!</a>
 </form>
 <div>
