--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -11,9 +11,9 @@
                 <h5 class="card-header">Search for books</h5>
                 <div class="card-body">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
+                        <input type="text" class="form-control" [(ngModel)]="contentSearch" placeholder="Search for...">
                         <span class="input-group-btn">
-                            <button class="btn btn-secondary" type="button">Go!</button>
+                            <button routerLink='/search' [queryParams]="{q: contentSearch}" class="btn btn-secondary" type="button">Go!</button>
                         </span>
                     </div>
                 </div>
