--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -1,41 +1,94 @@
 <h1 class="my-4">
-    <small>({{books.length}}) books found</small>
+    <small>({{numberItems}}) books found</small>
 </h1>
-<form>
+<form #searchBook="ngForm" (ngSubmit)="advancedSearchBooks(searchBook,0)">
     <div class="from row">
         <div class="form-group col  ">
             <input type="email" class="form-control" placeholder="Search for anything" name="content" id="content"
-                rows="3">
+                rows="3" [(ngModel)]="model.content">
 
         </div>
     </div>
     <div class="from row">
         <div class="form-group col">
-            <input type="email" class="form-control" placeholder="Author" name="author" id="author" rows="3">
+            <input type="email" class="form-control" placeholder="Author" name="author" id="author" rows="3"
+                [(ngModel)]="model.author">
         </div>
         <div class="form-group col">
-            <input type="email" class="form-control" placeholder="Subject" name="issueID" id="issueID" rows="3">
+            <input type="email" class="form-control" placeholder="Subject" name="subject" id="subject" rows="3"
+                [(ngModel)]="model.subject">
         </div>
         <div class="form-group col">
-            <input type="email" class="form-control" placeholder="Editor" name="editor" id="editor" rows="3">
+            <input type="email" class="form-control" placeholder="Publisher" name="publisher" id="publisher" rows="3"
+                [(ngModel)]="model.publisher">
 
         </div>
     </div>
-    <a class="btn btn-secondary" data-toggle="collapse" href="#addIssue" role="button" aria-expanded="false"
-        aria-controls="addIssue">Go!</a>
+    <button type="submit" class="btn btn-secondary">Go!</button>
 </form>
-<div>
-    <hr>
-    <div class="row justify-content-center">
-        <div *ngFor="let book of books" style="margin-bottom: 5%;" class="col-md-3">
-            <div class="card">
-                <img style="width: 100%;height: 50%;" *ngIf="book?.volumeInfo?.imageLinks?.thumbnail !== undefined"
-                    src="{{book?.volumeInfo?.thumbnail}}" class="card-img-top" alt="...">
-                <img style="width: 100%;height: 50%;" *ngIf="book?.volumeInfo?.thumbnail == undefined"
-                    src="https://previews.123rf.com/images/ahasoft2000/ahasoft20001806/ahasoft2000180605137/102524627-question-mark-mosaic-created-from-gear-integration-components-vector-gear-integration-icons-are-grou.jpg"
-                    class="card-img-top" alt="...">
+<div *ngIf="waiting == true; then block else elseBlock"></div>
+<ng-template #block>
+    <div class="row justify-content-center" style="align-items: center;height: 50%;">
+        <div class="spinner-grow text-primary" style="width: 3rem;height: 3rem;" role="status">
+            <span  class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-secondary" style="width: 3rem;height: 3rem;" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-success" style="width: 3rem;height: 3rem;" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-danger" style="width: 3rem;height: 3rem;" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-warning" style="width: 3rem;height: 3rem;" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-info" style="width: 3rem;height: 3rem;" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-light" style="width: 3rem;height: 3rem;" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="spinner-grow text-dark" style="width: 3rem;height: 3rem;" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
+</ng-template>
+<ng-template #elseBlock>
+
+    <div>
+        <hr>
+        <ng-template #tipContent>Hello!</ng-template>
+        <div class="row justify-content-center">
+            <div *ngFor="let book of books" style="margin-bottom: 5%;" class="col-md-3">
+                <div class="card">
+                    <img  [ngbTooltip]="tipContent" style="width: 100%;height: 50%;" *ngIf="book?.volumeInfo?.imageLinks?.thumbnail !== undefined"
+                        src="{{book?.volumeInfo?.thumbnail}}" class="card-img-top" alt="...">
+                    <img (mouseover)="print(book.id)" style="width: 100%;height: 50%;" *ngIf="book?.volumeInfo?.thumbnail == undefined"
+                        src="https://previews.123rf.com/images/ahasoft2000/ahasoft20001806/ahasoft2000180605137/102524627-question-mark-mosaic-created-from-gear-integration-components-vector-gear-integration-icons-are-grou.jpg"
+                        class="card-img-top" alt="...">
+                </div>
             </div>
         </div>
-
+        <hr>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item" [ngClass]="{'disabled': currentIndex === 0}">
+                    <a class="page-link" href="javascript:void(0)"
+                        (click)="advancedSearchBooks(searchBook,currentIndex-1)">Previous</a>
+                </li>
+                <li *ngFor="let in of counter(10) ;let i = index" class="page-item"><a class="page-link active"
+                        href="javascript:void(0)"
+                        [ngStyle]="currentIndex === i && { 'background': '#007bff','color':'white'}"
+                        (click)="advancedSearchBooks(searchBook,i);setCurrentIndex(i)">{{i+1}}</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="javascript:void(0)"
+                        (click)="advancedSearchBooks(searchBook,currentIndex+1)">Next</a>
+                </li>
+            </ul>
+        </nav>
     </div>
-    <hr>
+</ng-template>
+<ng-template #tipContent>Hello</ng-template>
