--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -30,7 +30,7 @@
 <ng-template #block>
     <div class="row justify-content-center" style="align-items: center;height: 50%;">
         <div class="spinner-grow text-primary" style="width: 3rem;height: 3rem;" role="status">
-            <span  class="sr-only">Loading...</span>
+            <span class="sr-only">Loading...</span>
         </div>
         <div class="spinner-grow text-secondary" style="width: 3rem;height: 3rem;" role="status">
             <span class="sr-only">Loading...</span>
@@ -59,15 +59,13 @@
 
     <div>
         <hr>
-        <ng-template #tipContent>Hello!</ng-template>
         <div class="row justify-content-center">
             <div *ngFor="let book of books" style="margin-bottom: 5%;" class="col-md-3">
                 <div class="card">
-                    <img  [ngbTooltip]="tipContent" style="width: 100%;height: 50%;" *ngIf="book?.volumeInfo?.imageLinks?.thumbnail !== undefined"
-                        src="{{book?.volumeInfo?.thumbnail}}" class="card-img-top" alt="...">
-                    <img (mouseover)="print(book.id)" style="width: 100%;height: 50%;" *ngIf="book?.volumeInfo?.thumbnail == undefined"
-                        src="https://previews.123rf.com/images/ahasoft2000/ahasoft20001806/ahasoft2000180605137/102524627-question-mark-mosaic-created-from-gear-integration-components-vector-gear-integration-icons-are-grou.jpg"
-                        class="card-img-top" alt="...">
+                    <img [ngbTooltip]="tipContent" tooltipClass="class" placement="right"
+                        style="width: 100%;height: 250px;" src="{{book?.volumeInfo?.thumbnail}}" class="card-img-top"
+                        alt="...">
+
                 </div>
             </div>
         </div>
@@ -91,4 +89,18 @@
         </nav>
     </div>
 </ng-template>
-<ng-template #tipContent>Hello</ng-template>
+<ng-template #tipContent>
+    <div class="card" style="width: 18rem;">
+        <div style="background-color: gray;" class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.
+                Some quick example text to build on the card title and make up the bulk of the card's
+                content
+                Some quick example text to build on the card title and make up the bulk of the card's
+                content
+                Some quick example text to build on the card title and make up the bulk of the card's
+                content</p>
+        </div>
+    </div>
+</ng-template>
