--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,4 +2,20 @@
 body {
     padding-top: 56px;
   }
-  
+
+  .class .tooltip-inner {
+    background: none;
+  border-radius: 0.25rem;
+  text-align: left;
+  width: 10.5rem;
+  z-index: 10;
+
+  }
+  .class .arrow::before {
+    border-top-color:none;
+    box-shadow: transparent;
+  }
+
+  .tooltip::after {
+    z-index: 1;
+  }
