--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -62,7 +62,7 @@
         <div class="row justify-content-center">
             <div *ngFor="let book of books" style="margin-bottom: 5%;" class="col-md-3">
                 <div class="card">
-                    <img [ngbTooltip]="tipContent" tooltipClass="class" placement="right"
+                    <img (mouseover)="print(book.id)" [ngbTooltip]="tipContent" tooltipClass="class" placement="right"
                         style="width: 100%;height: 250px;" src="{{book?.volumeInfo?.thumbnail}}" class="card-img-top"
                         alt="...">
 
@@ -92,15 +92,8 @@
 <ng-template #tipContent>
     <div class="card" style="width: 18rem;">
         <div style="background-color: gray;" class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.
-                Some quick example text to build on the card title and make up the bulk of the card's
-                content
-                Some quick example text to build on the card title and make up the bulk of the card's
-                content
-                Some quick example text to build on the card title and make up the bulk of the card's
-                content</p>
+            <h5 class="card-title">{{test.volumeInfo.title}}</h5>
+            <p>{{test.volumeInfo.description}}</p>
         </div>
     </div>
 </ng-template>
