--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg  bg-light fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Booksy</a>
+        <a class="navbar-brand" routerLink="home" href="javascript:void(0)">Booksy</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
