--- a/client/src/app/components/books/books.component.html
+++ b/client/src/app/components/books/books.component.html
@@ -5,21 +5,21 @@
     <h4>Popular books in Classics</h4><a href="#">More in Classics</a>
     <hr>
     <div class="row justify-content-center">
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="card">
                 <img style="width: 100%;height: 50%;"
                     src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
                     alt="...">
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="card">
                 <img style="width: 100%;height: 50%;"
                     src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
                     alt="...">
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="card">
                 <img style="width: 100%;height: 50%;"
                     src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
@@ -27,7 +27,21 @@
             </div>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-2">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="card">
+                <img style="width: 100%;height: 50%;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+            </div>
+        </div>
+        <div class="col-md-2">
             <div class="card">
                 <img style="width: 100%;height: 50%;"
                     src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
@@ -40,21 +54,21 @@
         <h4>Popular books in Sport</h4><a href="#">More in Sport</a>
         <hr>
         <div class="row justify-content-center">
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="card">
                     <img style="width: 100%;height: 50%;"
                         src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg"
                         class="card-img-top" alt="...">
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="card">
                     <img style="width: 100%;height: 50%;"
                         src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg"
                         class="card-img-top" alt="...">
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="card">
                     <img style="width: 100%;height: 50%;"
                         src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg"
@@ -62,7 +76,21 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-2">
+                <div class="card">
+                    <img style="width: 100%;height: 50%;"
+                        src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg"
+                        class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="card">
+                    <img style="width: 100%;height: 50%;"
+                        src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg"
+                        class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-md-2">
                 <div class="card">
                     <img style="width: 100%;height: 50%;"
                         src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg"
