--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,44 +1,6 @@
 <div class="container">
-    <div class="row">
-        <div class="col-md-4">
-            <div class="card my-4" style="margin-bottom: 10px;">
-                <h5 class="card-header">Search for books</h5>
-                <div class="card-body">
-                    <div class="input-group">
-                        <input type="text" class="form-control" [(ngModel)]="contentSearch" placeholder="Search for...">
-                        <span class="input-group-btn">
-                            <button routerLink='/search' [queryParams]="{q: contentSearch}" class="btn btn-secondary"
-                                type="button">Go!</button>
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <div class="card my-4">
-                <h5 class="card-header">Book Shelves</h5>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <ul class="list-group">
-                                <li class="list-group-item d-flex justify-content-between align-items-center">
-                                    Currently reading
-                                    <span class="badge badge-primary badge-pill">14</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center">
-                                    Read
-                                    <span class="badge badge-primary badge-pill">2</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center">
-                                    Read later
-                                    <span class="badge badge-primary badge-pill">1</span>
-                                </li>
-                            </ul>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-8">
+    <div class="row justify-content-center">
+        <div class="col-md-10">
             <router-outlet></router-outlet>
         </div>
     </div>
