--- a/client/src/app/components/books/bookdetails/bookdetails.component.html
+++ b/client/src/app/components/books/bookdetails/bookdetails.component.html
@@ -16,10 +16,13 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-row">
 <div class="w3-col l8 s12">
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" width="100" height="500" class="card-img-top">
     <div class="w3-container">
+    <img src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" width="150" height="300" class="card-img-right">
+      <div class="w3-container">
       <h3><b>Perfect Nany</b></h3>
+      <h5>By : <span class="w3-opacity">Laila Slimani</span></h5>
       <h5>Rating : <span class="w3-opacity">8/10</span></h5>
+      </div>
     </div>
 
     <div class="w3-container">
@@ -27,7 +30,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       <div class="w3-row">
         <div class="w3-col m8 s12">
-          <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
+          <p><button class="w3-button w3-padding-large w3-white w3-border"><b>Add to shelf</b></button></p>
         </div>
         <div class="w3-col m4 w3-hide-small">
           <p><span class="w3-padding-large w3-right"><b>Reviews  </b> <span class="w3-tag">0</span></span></p>
@@ -42,14 +45,6 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- Introduction menu -->
 <div class="w3-col l4">
-  <!-- About Card -->
-  <div class="w3-card w3-margin w3-margin-top">
-  <img src="https://www.vanityfair.fr/uploads/images/thumbs/201847/25/vf_leila_slimani_3483.jpeg_north_1160x474_.jpg" style="width:100%">
-    <div class="w3-container w3-white">
-      <h4><b>Author</b></h4>
-      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat..</p>
-    </div>
-  </div><hr>
   
   <!-- Posts -->
   <div class="w3-card w3-margin">
@@ -58,18 +53,22 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
     <ul class="w3-ul w3-hoverable w3-white">
       <li class="w3-padding-16">
+        <img src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
         <span class="w3-large">Lorem</span><br>
         <span>Sed mattis nunc</span>
       </li>
       <li class="w3-padding-16">
+          <img src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
         <span class="w3-large">Ipsum</span><br>
         <span>Praes tinci sed</span>
       </li> 
       <li class="w3-padding-16">
+          <img src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
         <span class="w3-large">Dorum</span><br>
         <span>Ultricies congue</span>
       </li>   
       <li class="w3-padding-16 w3-hide-medium w3-hide-small">
+          <img src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
         <span class="w3-large">Mingsum</span><br>
         <span>Lorem ipsum dipsum</span>
       </li>  
