bookdetails update-reviewsForm

--- a/client/src/app/components/bookdetails/bookdetails.component.html
+++ b/client/src/app/components/bookdetails/bookdetails.component.html
@@ -48,41 +48,57 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   
   <!-- Posts -->
   <div class="w3-card w3-margin">
-    <div class="w3-container w3-padding">
-      <h4>See similar books</h4>
+      <div class="w3-container w3-padding">
+        <h4>See similar book</h4>
+      </div>
+      <ul class="w3-ul w3-hoverable w3-white">
+        <li class="w3-padding-16">
+          <img src="https://products-images.di-static.com/image/fedor-dostoievski-crime-et-chatiment/9782253082507-475x500-1.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px;height:50px;">
+          <span class="w3-large">Lorem</span><br>
+          <span>Sed mattis nunc</span>
+        </li>
+        <li class="w3-padding-16">
+            <img src="https://products-images.di-static.com/image/fedor-dostoievski-crime-et-chatiment/9782253082507-475x500-1.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px;height:50px;">
+          <span class="w3-large">Ipsum</span><br>
+          <span>Praes tinci sed</span>
+        </li> 
+        <li class="w3-padding-16">
+            <img src="https://products-images.di-static.com/image/fedor-dostoievski-crime-et-chatiment/9782253082507-475x500-1.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px;height:50px;">
+          <span class="w3-large">Dorum</span><br>
+          <span>Ultricies congue</span>
+        </li>   
+        <li class="w3-padding-16 w3-hide-medium w3-hide-small">
+            <img src="https://products-images.di-static.com/image/fedor-dostoievski-crime-et-chatiment/9782253082507-475x500-1.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px;height:50px;">
+          <span class="w3-large">Mingsum</span><br>
+          <span>Lorem ipsum dipsum</span>
+        </li>  
+      </ul>
     </div>
-    <ul class="w3-ul w3-hoverable w3-white">
-      <li class="w3-padding-16">
-        <img src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Lorem</span><br>
-        <span>Sed mattis nunc</span>
-      </li>
-      <li class="w3-padding-16">
-          <img src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Ipsum</span><br>
-        <span>Praes tinci sed</span>
-      </li> 
-      <li class="w3-padding-16">
-          <img src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Dorum</span><br>
-        <span>Ultricies congue</span>
-      </li>   
-      <li class="w3-padding-16 w3-hide-medium w3-hide-small">
-          <img src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Mingsum</span><br>
-        <span>Lorem ipsum dipsum</span>
-      </li>  
-    </ul>
-  </div>
-  <hr> 
+    <hr> 
  
-  
+    <div class="w3-card w3-margin">
+        <div class="w3-container w3-padding">
+          <h4>Reviews</h4>
+          <span class="w3-opacity">Write review</span>
+        </div>
+        <div class="w3-container w3-white">
+            <form>
+                <div class="form-group">
+                  <label>Review</label>
+                  <input type="text" class="form-control">
+                </div>
+                <button type="submit" class="btn btn-secondary">submit</button>
+              </form>
+        </div>
+      </div>
   
 <!-- END Introduction Menu -->
 </div>
+<div class="w3-content" >
 
+</div>
 <!-- END GRID -->
-</div><br>
+</div>
 
 <!-- END w3-content -->
 </div>
