--- a/client/src/app/components/shelves/shelves.component.html
+++ b/client/src/app/components/shelves/shelves.component.html
@@ -1,17 +1,51 @@
-<h1 class="my-4">
+<h3 class="my-4">
     <small>My shelves</small>
-</h1>
+</h3>
+<form>
+    <div class="form-group">
+        <div class="row">
+            <div class="col-md-10">
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Add a new shelf">
+            </div>
+            <div class="col">
+                <button style="width: 100%;" type="submit" class="btn btn-primary">Add</button>
+            </div>
+        </div>
+    </div>
+</form>
 <ul class="list-group">
     <li class="list-group-item d-flex justify-content-between align-items-center">
         <a href="#">Currently reading</a>
-        <span class="badge badge-danger badge-pill"><i class="fa fa-times"></i></span>
+        <span style="cursor: pointer;" data-toggle="modal" data-target="#exampleModal"
+            class="badge badge-danger badge-pill"><i class="fa fa-times"></i></span>
     </li>
     <li class="list-group-item d-flex justify-content-between align-items-center">
         <a href="#">Read</a>
-        <span class="badge badge-danger badge-pill"><i class="fa fa-times"></i></span>
+        <span style="cursor: pointer;" data-toggle="modal" data-target="#exampleModal" class="badge badge-danger badge-pill"><i class="fa fa-times"></i></span>
     </li>
     <li class="list-group-item d-flex justify-content-between align-items-center">
-        <a href="#">read later</a>
-        <span class="badge badge-danger badge-pill"><i class="fa fa-times"></i></span>
+        <a href="#">Read later</a>
+        <span style="cursor: pointer;" data-toggle="modal" data-target="#exampleModal" class="badge badge-danger badge-pill"><i class="fa fa-times"></i></span>
     </li>
 </ul>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Confirmation</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this shelf ?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-danger">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
