--- a/client/src/app/components/bookdetails/bookdetails.component.html
+++ b/client/src/app/components/bookdetails/bookdetails.component.html
@@ -1,110 +1,76 @@
-<!DOCTYPE html>
-<html>
-<title>Perfect Nany</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-</style>
-<body class="w3-light-grey">
+<!-- Page Content -->
+<div class="container">
 
+  <div class="row">
 
-<div class="w3-content" style="max-width:1400px">
-
-<div class="w3-row">
-<div class="w3-col l8 s12">
-  <div class="w3-card-4 w3-margin w3-white">
-    <div class="w3-container">
-    <img src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" width="150" height="300" class="card-img-right">
-      <div class="w3-container">
-      <h3><b>Perfect Nany</b></h3>
-      <h5>By : <span class="w3-opacity">Laila Slimani</span></h5>
-      <h5>Rating : <span class="w3-opacity">8/10</span></h5>
-      </div>
-    </div>
-
-    <div class="w3-container">
-      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-        tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      <div class="w3-row">
-        <div class="w3-col m8 s12">
-          <p><button class="w3-button w3-padding-large w3-white w3-border"><b>Add to shelf</b></button></p>
+    <div class="col-lg-3">
+      <h4 class="my-4">See similar books</h4>
+      <div class="list-group">
+        <div style="margin-bottom: 10px;">
+          <img style="width: 80px;height: 140px;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
         </div>
-        <div class="w3-col m4 w3-hide-small">
-          <p><span class="w3-padding-large w3-right"><b>Reviews  </b> <span class="w3-tag">0</span></span></p>
+        <div style="margin-bottom: 10px;">
+          <img style="width: 80px;height: 140px;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
+        </div>
+        <div style="margin-bottom: 10px;">
+          <img style="width: 80px;height: 140px;"
+                    src="https://i.pinimg.com/236x/82/79/74/827974d98ed5dabfbeecbdae890caebf.jpg" class="card-img-top"
+                    alt="...">
         </div>
       </div>
     </div>
+    <!-- /.col-lg-3 -->
+
+    <div class="col-lg-9">
+
+      <div class="card mt-4">
+        <img style="width: 180px;height: 250px;"
+          src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Cover_of_the_first_edition_of_Crime_and_Punishment.jpg" alt="">
+        <div class="card-body">
+          <h3 class="card-title">Crime et chatiments</h3>
+          <h5>By : <span class="opct opacity-50">Fiodor Mikhaïlovitch Dostoïevski</span></h5>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente dicta fugit fugiat hic aliquam itaque facere, soluta. Totam id dolores, sint aperiam sequi pariatur praesentium animi perspiciatis molestias iure, ducimus!</p>
+          <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
+          4.0 stars <br><br>
+          <a href="#" class="btn btn-success">Add to shelf</a>
+        </div>
+        
+      </div>
+      <!-- /.card -->
+
+      <div class="card card-outline-secondary my-4">
+        <div class="card-header">
+          Reviews
+        </div>
+        <div class="card-body">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
+          <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+          <hr>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
+          <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+          <hr>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
+          <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+          <hr>
+          <form>
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1">Review</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="review"></textarea>
+            </div>
+          </form>
+          <a href="#" class="btn btn-success">Leave a Review</a>
+        </div>
+      </div>
+      <!-- /.card -->
+
+    </div>
+    <!-- /.col-lg-9 -->
+
   </div>
-  <hr>
-
-  
-</div>
-
-<!-- Introduction menu -->
-<div class="w3-col l4">
-  
-  <!-- Posts -->
-  <div class="w3-card w3-margin">
-      <div class="w3-container w3-padding">
-        <h4>See similar book</h4>
-      </div>
-      <ul class="w3-ul w3-hoverable w3-white">
-        <li class="w3-padding-16">
-          <img src="https://products-images.di-static.com/image/fedor-dostoievski-crime-et-chatiment/9782253082507-475x500-1.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px;height:50px;">
-          <span class="w3-large">Lorem</span><br>
-          <span>Sed mattis nunc</span>
-        </li>
-        <li class="w3-padding-16">
-            <img src="https://products-images.di-static.com/image/fedor-dostoievski-crime-et-chatiment/9782253082507-475x500-1.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px;height:50px;">
-          <span class="w3-large">Ipsum</span><br>
-          <span>Praes tinci sed</span>
-        </li> 
-        <li class="w3-padding-16">
-            <img src="https://products-images.di-static.com/image/fedor-dostoievski-crime-et-chatiment/9782253082507-475x500-1.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px;height:50px;">
-          <span class="w3-large">Dorum</span><br>
-          <span>Ultricies congue</span>
-        </li>   
-        <li class="w3-padding-16 w3-hide-medium w3-hide-small">
-            <img src="https://products-images.di-static.com/image/fedor-dostoievski-crime-et-chatiment/9782253082507-475x500-1.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px;height:50px;">
-          <span class="w3-large">Mingsum</span><br>
-          <span>Lorem ipsum dipsum</span>
-        </li>  
-      </ul>
-    </div>
-    <hr> 
- 
-    <div class="w3-card w3-margin">
-        <div class="w3-container w3-padding">
-          <h4>Reviews</h4>
-          <span class="w3-opacity">Write review</span>
-        </div>
-        <div class="w3-container w3-white">
-            <form>
-                <div class="form-group">
-                  <label>Review</label>
-                  <input type="text" class="form-control">
-                </div>
-                <button type="submit" class="btn btn-secondary">submit</button>
-              </form>
-        </div>
-      </div>
-  
-<!-- END Introduction Menu -->
-</div>
-<div class="w3-content" >
 
 </div>
-<!-- END GRID -->
-</div>
-
-<!-- END w3-content -->
-</div>
-
-
-
-</body>
-</html>
-
+<!-- /.container -->
