detailsbook front-update

--- a/client/src/app/components/bookdetails/bookdetails.component.html
+++ b/client/src/app/components/bookdetails/bookdetails.component.html
@@ -32,7 +32,7 @@
           src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Cover_of_the_first_edition_of_Crime_and_Punishment.jpg" alt="">
         <div class="card-body">
           <h3 class="card-title">Crime et chatiments</h3>
-          <h5>By : <span class="opct opacity-50">Fiodor Mikhaïlovitch Dostoïevski</span></h5>
+          <h6>By : <small class="text-muted">Fiodor Mikhaïlovitch Dostoïevski</small></h6>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente dicta fugit fugiat hic aliquam itaque facere, soluta. Totam id dolores, sint aperiam sequi pariatur praesentium animi perspiciatis molestias iure, ducimus!</p>
           <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
           4.0 stars <br><br>
