--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -30,7 +30,7 @@ body {
 }
 .rate:not(:checked) > input {
     position:absolute;
-    top:-9999px;
+    display:none;
 }
 .rate:not(:checked) > label {
     float:right;
