--- a/client/src/app/components/shelves/shelves.component.html
+++ b/client/src/app/components/shelves/shelves.component.html
@@ -1,11 +1,12 @@
 <h3 class="my-4">
     <small>My shelves</small>
 </h3>
-<form>
+<form #newShelf="ngForm" (ngSubmit)="createShelf(newShelf)">
     <div class="form-group">
         <div class="row">
             <div class="col-md-10">
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Add a new shelf">
+                <input type="text" class="form-control" [(ngModel)]="shelfName" name="name" id="name" placeholder="Add a new shelf">
+                <label style="color: red;" *ngIf="validationError" >Name must be between 3 and 32 caracters</label>
             </div>
             <div class="col">
                 <button style="width: 100%;" type="submit" class="btn btn-primary">Add</button>
@@ -16,7 +17,7 @@
 <ul class="list-group">
     <li *ngFor="let shelf of shelves" class="list-group-item d-flex justify-content-between align-items-center">
         <a href="#">{{shelf.name}}</a>
-        <span style="cursor: pointer;" data-toggle="modal" data-target="#exampleModal"
+        <span style="cursor: pointer;" (click)="setIDtoDelete(shelf._id)" data-toggle="modal" data-target="#exampleModal"
             class="badge badge-danger badge-pill"><i class="fa fa-times"></i></span>
     </li>
 </ul>
@@ -36,7 +37,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-danger">Delete</button>
+                <button type="button" (click)="deleteShelf()" data-dismiss="modal" class="btn btn-danger">Delete</button>
             </div>
         </div>
     </div>
