detail book and reviews

--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -24,8 +24,7 @@
 
         </div>
     </div>
-    <button style="background-color:#0faafb;border-radius: 17px; color:white;font-weight: bold;border: none;"
-        type="submit" class="btn btn-secondary">Go</button>
+    <button type="submit" class="btn btn-secondary">Go</button>
 </form>
 <div *ngIf="waiting == true; then block else elseBlock"></div>
 <ng-template #block>
