--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,48 +1,58 @@
-<nav class="navbar navbar-expand-lg  bg-light fixed-top">
+<nav style="padding: 1;" class="navbar navbar-expand-lg  bg-light fixed-top">
     <div class="container">
-        <a class="navbar-brand" routerLink="home" href="javascript:void(0)">Booksy</a>
+        <a style="font-weight: bold;" class="navbar-brand" routerLink="home" href="javascript:void(0)">Booksy</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto" style="align-items: center;">
-                <li class="nav-item active" style="margin-right: 50px;">
+                <li style="margin-right: 50px;">
                     <form #searchForm="ngForm" (ngSubmit)="searchBooks(searchForm)">
                         <div class="input-group">
-                            <input style="width: 300px;" type="text" id="contentSearch" name="contentSearch"
-                                class="form-control" [(ngModel)]="contentSearch" placeholder="Search for...">
+                            <input style="width: 300px; height: 34px;border-radius: 10px;" type="text"
+                                id="contentSearch" name="contentSearch" class="form-control" [(ngModel)]="contentSearch"
+                                placeholder="Search">
                             <span class="input-group-btn">
-                                <button style="box-shadow:none;border:none;background-color: transparent;color: #0faafb;" type="submit"
-                                    class="btn btn-secondary"><i style="font-size: 20px;"
+                                <button
+                                    style="box-shadow:none;border:none;background-color: transparent;color: #008cba;"
+                                    type="submit" class="btn btn-secondary"><i style="font-size: 18px;"
                                         class="fa fa-search"></i></button>
                             </span>
                         </div>
                     </form>
                 </li>
-                <li style="font-size: medium;" class="nav-item active">
-                    <a class="nav-link" routerLink="home" href="javascript:void(0)">Home
+                <li class="nav-item active">
+                    <a  class="nav-link" routerLink="home" href="javascript:void(0)"><i
+                            class="fas fa-home"></i> Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li *ngIf="!auth.loggedIn" style="font-size: medium;" class="nav-item">
-                    <a (click)="auth.login()" class="nav-link" href="javascript:void(0)">Login</a>
+                <li *ngIf="auth.loggedIn" class="nav-item">
+                    <a routerLink="shelves" href="javascript:void(0)"  class="nav-link"
+                        href="javascript:void(0)"><i class="fas fa-book"></i> Shelves</a>
                 </li>
-                <li *ngIf="auth.loggedIn" class="nav-item" style="font-size: medium;">
+                <li *ngIf="!auth.loggedIn" class="nav-item">
+                    <a (click)="auth.login()"  class="nav-link"
+                        href="javascript:void(0)">Login</a>
+                </li>
+                <li *ngIf="auth.loggedIn" class="nav-item">
                     <div class="dropdown">
-                        <a style="margin-top: 2px;" href="javascript:void(0)" class="nav-link dropdown-toggle" data-toggle="dropdown">
-                                {{ auth.userProfile.name }}
-                            <img style="height: 40px;width: 40px;" src="{{ auth.userProfile.picture}}"
-                                class="rounded-circle" alt="Cinque Terre" width="304" height="236">
-                        </a>
+                        <a href="javascript:void(0)" class="nav-link dropdown-toggle"
+                            data-toggle="dropdown"><i class="fas fa-user"></i>
+                            {{ auth.userProfile.name }} </a>
                         <div class="dropdown-menu">
-                            <a routerLink="shelves" href="javascript:void(0)" class="nav-link"
-                                href="javascript:void(0)">Shelves</a>
-                            <a routerLink="shelves" href="javascript:void(0)" class="nav-link"
-                                href="javascript:void(0)">Settings</a>
-                            <a (click)="auth.logout()" class="nav-link" href="javascript:void(0)">Logout</a>
+                            <a style="font-size: small;" routerLink="shelves"
+                                href="javascript:void(0)" class="nav-link" href="javascript:void(0)">
+                                <i class="fas fa-cog"></i> Settings</a>
+                            <a style="font-size: small;" (click)="auth.logout()" class="nav-link"
+                                href="javascript:void(0)"><i class="fas fa-sign-out-alt"></i> Logout</a>
                         </div>
                     </div>
+                </li>
+                <li *ngIf="auth.loggedIn" class="nav-item">
+                    <img style="height: 40px;width: 40px;" src="{{ auth.userProfile.picture}}" class="rounded-circle"
+                        alt="Cinque Terre" width="304" height="236">
                 </li>
             </ul>
         </div>
